8240722: [BACKOUT] G1DirtyCardQueue destructor has useless flush

Backout JDK-8240133

Reviewed-by: sjohanss